# nanotekspice

./: .gitignore  CMakeLists.txt  Makefile  README.md  nanoteckspice.mdj  nanotekspice  nanotekspice.cbp  unit_test
.github/workflows/: SyncingTwoRepo.yml  SyncingTwoRepoPR.yml
src/: AComponent.cpp  AComponent.hpp  AComposedComponent.cpp  AComposedComponent.hpp  AShell.cpp  AShell.hpp  Circuit.cpp  Circuit.hpp  Error.hpp  Factory.cpp  Factory.hpp  Graph.cpp  Graph.hpp  Handler.cpp  Handler.hpp  IComponent.hpp  Parser.cpp  Parser.hpp  main.cpp  parser.cpp  parser.hpp
src/components/: And.cpp  And.hpp  Clock.cpp  Clock.hpp  False.cpp  Input.cpp  Input.hpp  Output.cpp  Output.hpp  Rom.hpp  True.cpp  True.hpp
src/components/advanced/: 4008.cpp  4008.hpp  4013.cpp  4013.hpp  4512.cpp  4512.hpp
src/components/elementary/: Add.cpp  Add.hpp  And.cpp  And.hpp  Nand.cpp  Nand.hpp  Nor.cpp  Nor.hpp  Not.cpp  Not.hpp  Or.cpp  Or.hpp  Xor.cpp  Xor.hpp
src/components/gate/: 4001.cpp  4001.hpp  4011.cpp  4011.hpp  4030.cpp  4030.hpp  4069.cpp  4069.hpp  4071.cpp  4071.hpp  4081.cpp  4081.hpp
src/components/special/: Clock.cpp  Clock.hpp  False.cpp  False.hpp  Input.cpp  Input.hpp  Output.cpp  Output.hpp  True.cpp  True.hpp
tests/: CMakeTest  TestAnd.cpp  TestFile.cpp  TestInputOutput.cpp  TestOr.cpp  TestSingleAdd.cpp  TestSingleXor.cpp  testCrashParser.nts  test_no_chipsets.nts  test_with_comments.nts  test_with_unknown_chipset.nts
tests/Composed/: TestComposedNand.cpp  TestComposedNor.cpp
tests/File/: TestFile.cpp
tests/Gate/: TestGate4001.cpp  TestGate4011.cpp  TestGate4030.cpp  TestGate4069.cpp  TestGate4071.cpp  TestGate4081.cpp
tests/Single/: TestSingleAnd.cpp  TestSingleClock.cpp  TestSingleNot.cpp
tests/nts_single/: add.nts  nand.nts  nor.nts  test.nts  xor.nts
